@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+* Fixed: default unit title height to avoid collapse when a unit title is empty.
 
 = 2.0.7 =
 -------------------------------------------------
